Rebuild Cel-Fii Ventas v1